--- a/ZSExplorer/MainWindow.xaml
+++ b/ZSExplorer/MainWindow.xaml
@@ -119,23 +119,44 @@
                             </StackPanel>
                         </StackPanel>
                     </Border>
+
                     <Border Grid.Row="4" BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="10">
-                        <Grid Grid.Column="1" Margin="10">
+                        <Grid Margin="10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
-                            <!-- <DataGrid x:Name="MarketDataGrid"
-                                    AutoGenerateColumns="True"
+                            <!-- Calls Label -->
+                            <TextBlock Grid.Column="0" Grid.Row="0"
+                                    Text="Call Data"
+                                    FontSize="16"
+                                    FontWeight="Bold"
+                                    Foreground="#FF2C3E50"
+                                    HorizontalAlignment="Center"
+                                    Margin="0,0,0,5" />
+
+                            <!-- Puts Label -->
+                            <TextBlock Grid.Column="1" Grid.Row="0"
+                                    Text="Put Data"
+                                    FontSize="16"
+                                    FontWeight="Bold"
+                                    Foreground="#FF2C3E50"
+                                    HorizontalAlignment="Center"
+                                    Margin="0,0,0,5" />
+
+
+                            <!-- Calls DataGrid -->
+                            <DataGrid x:Name="CallsDataGrid" 
+                                    Grid.Column="0" Grid.Row="1"
+                                    AutoGenerateColumns="False"
                                     AutoGeneratingColumn="MarketDataGrid_AutoGeneratingColumn"
-                                    Grid.Row="1"
-                                    CanUserAddRows="False"/> -->
-                            <DataGrid x:Name="MarketDataGrid" 
-                                AutoGenerateColumns="False" 
-                                AutoGeneratingColumn="MarketDataGrid_AutoGeneratingColumn"
-                                Grid.Row="1"
-                                CanUserAddRows="False">
+                                    CanUserAddRows="False"
+                                    Margin="0,0,10,0">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}" IsReadOnly="True"/>
                                     <DataGridTextColumn Header="DateTime" Binding="{Binding DateTime, StringFormat=MM/dd/yyyy HH:mm:ss.ffffff}" IsReadOnly="True"/>
@@ -145,7 +166,20 @@
                                 </DataGrid.Columns>
                             </DataGrid>
 
-
+                            <!-- Puts DataGrid -->
+                            <DataGrid x:Name="PutsDataGrid" 
+                                    Grid.Column="1" Grid.Row="1"
+                                    AutoGenerateColumns="False"
+                                    AutoGeneratingColumn="MarketDataGrid_AutoGeneratingColumn"
+                                    CanUserAddRows="False">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}" IsReadOnly="True"/>
+                                    <DataGridTextColumn Header="DateTime" Binding="{Binding DateTime, StringFormat=MM/dd/yyyy HH:mm:ss.ffffff}" IsReadOnly="True"/>
+                                    <DataGridTextColumn Header="MMID" Binding="{Binding MMID}" IsReadOnly="True"/>
+                                    <DataGridCheckBoxColumn Header="BidAsk" Binding="{Binding BidAsk}" IsReadOnly="True"/>
+                                    <DataGridTextColumn Header="Price" Binding="{Binding Price}" IsReadOnly="True"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
 
                         </Grid>
                     </Border>
